<resources>
    <string name="app_name">Tábor szervező alkalmazás</string>
    <string name="email">Email</string>
    <string name="gyerekek">Gyerekek</string>
    <string name="taborok">Táborok</string>
    <string name="email_kuldes">Email küldés</string>
    <string name="szulo_adatai">Szülő adatai:</string>
    <string name="egyeb_tudnivalok">Egyéb tudnivalók</string>
    <string name="evfolyam">Évfolyam</string>
    <string name="helyszin">Helyszín</string>
    <string name="ar">Ár:</string>
    <string name="taborozok">Táborozók:</string>
    <string name="sign">-</string>
    <string name="to">Címzett</string>
    <string name="sablon">Sablon</string>
    <string name="mezo">Mező</string>
    <string name="hozzaad">Hozzáad</string>
    <string name="targy">Tárgy</string>
    <string name="leveliras">Levélírás</string>
    <string name="kuldes">Küldés</string>
    <string name="haz">Ház</string>
    <string name="kapcsolatfelvetel">"Kedves {szulo_nev}!"
                        "\n"
                        "Örömmel köszöntöm Önt és gyermekét  a GERIDA Lovagrend nevében! Mivel elöször jelentkezett hozzánk táborba engedje meg, hogy pár szóban tájékoztassam a nálunk évek óta bevált szokásokról.\n"
                        "\n"
                        "A GERIDA Lovagrend a Rendör Kulturális és Hagyományörzö Egyesület keretei között müködö ifjúsági szervezet, amelynek jelenleg kb. 300 gyermek és 44 felnött tagja van. Célunk, hogy a hozzánk bármilyen úton jelentkezö gyerekeknek egy igazi közösséghez való tartozás lehetöségét kínáljuk és nyújtsuk, ezért az utóbbi években nem csak a nyári táborokban, hanem év közbeni rendezvényeken is igyekszünk nekik, (illetve bizonyos esetekbe kedves családjuknak) programot kínálni. Ezen programok leszervezéséhez természetesen szükség van a megfelelö kommunikációra, amelynek kiváló, és az elmúlt években nagyon jól bevált eszköze az internet - ezen belül elsösorban a facebook közösségi portál, ahol a Gerida Lovagrendnek külön oldalai vannak:\n"
                        "\n"
                        "\t- Hedvig Imre Ibolya  (Gerida Lovagrend)  \n"
                        "\t- https://www.facebook.com/GeridaLovagrend/\n"
                        "\n"
                        "Kérem Önöket, ha egy mód van rá csatlakozzanak ezekhez az oldalakhoz, ahol nem csak ez elkövetkezö rendezvényekröl, de az elmúlt évek sok-sok programjáról is kaphatnak információkat, képes beszámolókat. \n"
                        "\n"
                        "Mától kezdve - mivel gyermeke GERIDA "újoncnak" számít - Önök is kapnak tölünk mindenféle tájékoztató leveleket a "GERIDÁKAT" érintö aktuális témákban. Remélem, nem veszik ezt zaklatásnak, hiszen a jó szándék vezérel bennünket. (amennyiben mégis zavarók, akkor kérem ezt jelezzék, és természetesen nem küldünk több hasonló levelet)\n"
                        "\n"
                        "Remélem az általunk nyújtotta lehetöségek elnyerik majd  és ezáltal a tetszését. Bármilyen kérdéséhez készségesen állok rendelkezésre!\n"
                        "\n"
                        "Kérem, - mivel ez az elsö kapcsolatfelvétel - jelezzék vissza, hogy megérkezett-e ez az email!"</string>
    <string name="tudnivalok">"Kedves {szulo_nev}!\n"
                        "\n"
                        "A {tabor_kezdet}-{tabor_vege} között megrendezésre kerülö {tabor_nev} c. Gerida gyermektáborunkkal kapcsolatban elözetesen a következökröl tájékoztatom Önöket.\n"
                        "\n"
                        "Gyülekezö:\t{tabor_kezdet} 08.30 - 09.00-ig\n"
                        "ORFK Rendészeti Szervek Kiképzö Központ elötti parkolóból. (1097 Budapest, Vágóhíd u. 11-13.) \n"
                        "\t- Figyelem a gyerekeket két busz fogja szállítani, úgyhogy minden gyermek felfér rájuk!\n"
                        "\t- Kérem az autóval érkezöket, hogy úgy próbáljanak parkolni, hogy az esetlegesen késöbb érkeö busz úgy tudjon odaállni, hogy a gyerekek felszállása, illetve a csomagok bepakolása minél zökkenömentesebben, biztonságosabban történhessen! \n"
                        "\t- A helyszínen egy tüzoltó bázis is van, ezért kérem az autóval érkezöket, hogy a tüzoltó kapuk bejáratát is hagyják szabadon!\n"
                        " \n"
                        "Busz indulása:\t09.00 órakor (ha addigra a vidéken lakó gyermekek is megérkeznek! \n"
                        "\t- Itt kérem azokat, akik esetleg elöre tudják, hogy nem érnek ide 09.00 óráig azok feltétlenül jelezzék ezt nekünk minél elöbb, illetve \n"
                        "\t- azok is jelezzék, akik Parádra, a tábor helyszínére hozzák a gyermeküket, hogy ne várjuk öket feleslegesen!\n"
                        "\n"
                        "Hazaérkezés:\t{tabor_vege} 13.00 - 14.30 között ORFK Rendészeti Szervek Kiképzö Központ elötti parkolóhoz. (1097 Budapest, Vágóhíd u. 11-13.) \n"
                        "\n"
                        "A tábor helyszíne:\tZöldövezet Vendégház (Parádfürdö, Kristály út 91.)"
                        "\n"
                        "A gyermekek már az elsö nap ebédet kapnak, ezért kérjük, hogy számukra élelmiszert csak annyit csomagoljanak, amennyit megérkezésig el tudnak fogyasztani, különben az esetlegesen a csomagban felejtett élelmiszerre megindulnak a bogarak, hangyák és az senkinek sem kellemes. Ugyanez vonatkozik a különbözö kekszekre, vagy egyéb nasikra is. \n"
                        "\n"
                        "Étkezés:\tNapi négyszer (reggeli, ebéd, vacsora, és "pótvacsi") a tábor étkezdéjében.\n"
                        "Elhelyezés: \tParádfürdö - Zöldövezet Vendégház, 6-8 és 10 ágyas szobákban  \n"
                        "\n"
                        "A táborba tilos hozni: szúró- vágó eszközt, petárdát, alkoholt, cigarettát, drogot. Felsoroltak tartása, használata - a többi gyermek érdekében -, azonnali hazaszállítást von maga után!   \n"
                        "\n"
                        "Kérjük, hogy a gyermekek értékesebb ékszert, órát, müszaki cikket ne hozzanak magukkal! Az esetlegesen általuk elhagyott értékekért nem tudunk felelösséget vállalni!\n"
                        "\n"
                        "Kérem, hogy a gyermekek MOBIL TELEFONT NE hozzanak magukkal!!!!\n"
                        "A tábor idötartama alatt vezetöink és ifivezetöink folyamatosan a gyermekek között vannak, és mindent megtesznek a felmerülö problémák megoldása érdekében. Ugyanakkor nagyon nehéz a "honvágy" és az "Anyahiány" típusú problémákat úgy kezelni, hogyha abban a pillanatban amikor az erre hajlamos gyermek - aki egyébként szemmel láthatóan jól érzi magát és részt vesz a programokban - egy percre magára maradva, azonnal telefonon hívja Önöket, holott, ha nekünk szólna akkor bármilyen problémáját meg tudnánk oldani. Táboraink történelmi, illetve fantasy szerepjáték táborok, ahol a programok idején egyébként sem korhü a telefon használata, ugyanakkor a tábor elött meg fogjuk Önöknek adni a gyermekre közvetlenül vigyázó vezetök mobil telefonszámait, és ezeken keresztül elérhetik gyermekeiket amikor ez szükséges. Természetesen, ha olyan jellegü gond merülne fel, mi soron kívül jelentkezni fogunk. Kérem - és elöre is köszönöm - ez irányú együttmüködésüket és megértésüket, és azt is ha gyermekükkel otthon megbeszélik azt, hogy most egy olyan helyre jönnek, ahol a fentiek miatt a telefon nem szükséges, és ki lehet bírni 10 napot telefon nélkül is! \n"
                        "\n
                        "A táborok jellegzetességéböl adódóan - az egyéb gyermektáborokhoz képest - rengeteg plusz kiadással kell számolnunk (jelmezek, díszletek, korhü eszközök, Gerida kellékek stb.) amely költségeket természetesen nem szeretnénk Önökre hárítani. Nagy segítséget jelentene viszont, ha táborunkra felhívnák ismerösi körükben található vállalkozások, cégek figyelmét, akik esetleg látnak benne annyi fantáziát, hogy valamilyen formában - nem feltétlenül pénzbeli támogatásra gondolunk, hanem pl. gyümölcs, csokoládé, üdítö, ásványvíz, kisebb nagyobb játékok stb. - támogassanak bennünket annak érdekében, hogy minél színvonalasabb programot tudjunk biztosítani a gyermekek részére. A táborokra felajánlott támogatásokról - a táborunkat szervezö közhasznú Rendör Kulturális és Hagyományörzö Egyesület - igazolást tud adni, amelynek köszönhetöen ez a támogatási érték - legyen az pénzbeli vagy tárgyi természetü - az adóalapból leírható lesz.\n"
                        "\n"
                        "Jelen levelem egy elözetes tájékoztatás, azért, hogy a Kedves Szülök, a táborral kapcsolatos legfontosabb dolgokról minél elöbb tájékoztatva legyenek. Innentöl kezdve a táborig több olyan levelet is fogunk küldeni, ami a táborral kapcsolatos részfeladatokról értesítjük majd Önöket, és amikre több estetben válaszokat is várunk, kérem figyeljék majd ezeket a leveleket! Kérem ugyanakkor, hogyha a fentieken kívül bármi kérdés merül fel a Gerida Lovagrenddel vagy a táborral kapcsolatban hívjanak bizalommal!\n"
    </string>
    <string name="plusz_informacio">"Kedves {szulo_nev}!\n"
                        "\n"
                        "A Gerida táborokban nagy hangsúlyt fordítunk a tartalmas programokra és arra, hogy minden gyermek gyermekek lehetöség szerint megtalálja a számára legérdekesebb, legszórakoztatóbb játékot, elfoglaltságot. Tudjuk ugyanakkor azt is hogy egy-egy újonnan jövö gyermeknek nem egyszerü a beilleszkedés egy számára ismeretlen és nagyrészt idegen környezetbe, ahol sokszor senkit, vagy jobb esetben egy-két gyermeket ismer magán kívül. A gyermekekkel közvetlenül foglalkozó vezetök mindent elkövetnek, hogy ez a beilleszkedés minél könnyebb, zökkenö mentesebb legyen, de nagyon nagy segítség lenne az ez irányú munkánkban, ha egy pár gondolatban röviden bemutatnák nekünk gyermeküket. Elsösorban a következö szempontok lennének fontosak:\n"
                        "\t- Beilleszkedési tulajdonságok (pl. csendes visszahúzó, vagy könnyen barátkozik stb.)\n"
                        "\t- Fontos lenne azt is tudnunk, hogy szakértöi véleménnyel rendelkezik-e (BTM, SNI, stb.)\n"
                        "\n"
                        "Kérem ezen bemutatókat minél elöbb legyenek szívesek elküldeninekünk!\n"</string>
    <string name="alairas">"\n"
                        "Tisztelettel: \n"
                        "\n"
                        "\t\tMikó László\n"
                        "\t\ttáborvezetö\n"
                        "\t\t60-20-9523 221\n\n"</string>
    <string name="harry_potter">Harry Potter</string>
    <string name="egyeb">Egyéb</string>
    <string name="tabor_letrehozas">Tábor létrehozás</string>
    <string name="cim">Cím</string>
    <string name="tema">Téma</string>
    <string name="leiras">Leírás</string>
    <string name="letszam">Létszám</string>
    <string name="letrehozas">Létrehozás</string>
    <string name="tabor_leiras_hint">Tábor rövid leírása</string>
    <string name="maximum_gyerek">Maximum gyerek</string>
    <string name="parad">Parádfürdő, Zöldövezet Vendégház</string>
    <string name="meddig">Tábor vége</string>
    <string name="mettol">Tábor kezdete</string>
    <string name="gyermek_hozzaad">Gyermek hozzáadása</string>
    <string name="nem">Nem</string>
    <string name="szul">Szül. idő</string>
    <string name="fiu">Fiú</string>
    <string name="lany">Lány</string>
    <string name="bolygo">Bolygó</string>
    <string name="pozicio">Pozíció</string>
    <string name="tudnivalo_hint">Egyéb tudnivaló</string>
    <string name="etel_hint">Allergia, étel érzékenység</string>
    <string name="meret">Méret</string>
    <string name="etel">Étel</string>
    <string name="datum_kivalasztasa">Dátum kiválasztása</string>
    <string name="nev">Név</string>
    <string name="irsz">Irsz.</string>
    <string name="varos">Város</string>
    <string name="utca">Utca</string>
    <string name="telefon">Telefon</string>
    <string name="munkahely">Munkahely</string>
    <string name="szuloadatai">Szülő adatai</string>
</resources>