<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F8BD"
    app:layout_anchorGravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="volleybasicexample.abhiandroid.com.volleybasicexample.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="574dp"
        android:orientation="vertical"
        app:layout_anchorGravity="center"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/children"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:background="#E8B4B4"
            android:text="@string/gyerekek" />

        <Button
            android:id="@+id/camps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:background="#A2DFA5"
            android:text="@string/taborok" />

        <Button
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:background="#9DA8E1"
            android:text="@string/email_kuldes" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>